# coilas-lab

./: LICENSE  README.md
apps/todo-cli/: README.md  data.json  main.py  setup.cfg  setup.py  storage.py  test_todo.py  todo.py
