[metadata]
name = learning-todo-cli
version = 1.0.0
description = A small command-line todo application for learning project design
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules =
    main
    storage
    todo
python_requires = >=3.9

[options.entry_points]
console_scripts =
    todo = main:main
